--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
